wip! [vue3] Remove page transition effect to avoid jumping

--- a/web-src/src/mystyles.scss
+++ b/web-src/src/mystyles.scss
@@ -213,11 +213,17 @@ section.hero + section.fd-content {
 }
 
 /* Transition effect */
-.fade-enter-active, .fade-leave-active {
-  transition: opacity .4s;
+.fade-leave-active {
+  transition: opacity .2s ease;
 }
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+.fade-enter-active {
+  transition: opacity .5s ease;
+}
+.fade-enter-from, .fade-leave-to {
   opacity: 0;
+}
+.fade-enter-to, .fade-leave-from {
+  opacity: 1;
 }
 
 /* Add a little bit of spacing between title and subtitle */
